--- a/client/src/styles/users.scss
+++ b/client/src/styles/users.scss
@@ -89,3 +89,7 @@
 h5 {
   text-align: center;
 }
+
+.table-spacer {
+  width: 5rem;
+}
